# Apex

./: .env.example  .gitignore  .replit  DEPLOY.md  SESSION_STATE.md  SETUP.md  auto-update.sh  config.aggressive.yaml  config.yaml  deploy.sh  index.html  install.py  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh  start.sh  start_live.sh  start_paper.sh  sync_to_github.sh  vercel.json  watchdog.py
.streamlit/: config.toml
agents/: strategy_optimizer.py
configs/: config.py
core/: data_fetcher.py  data_sync.py  live_sync_daemon.py  paper_engine.py  risk_manager.py
dashboard/: .replit  app.py  requirements.txt  unified_vcc.py
data/: store.py
exchanges/: base.py  hyperliquid.py  lighter.py  mock.py  paper.py  polymarket.py  toobit.py
execution/: engine.py
logs/: paper_trades.jsonl  poly_all_trades.jsonl  poly_open_positions.json  poly_paper_results.json  poly_scan_log.jsonl  signals_log.jsonl  state.json  watchdog_status.json
monitoring/: alerts.py  dashboard.py  web_dashboard.py
monitoring/static/: index.html
polymarket/: BTC_5M_OPS.md  btc_5m_sniper.py  btc_strategy.py  copy_trader.py  eth_5m_sniper.py  polyconfig.py  preflight.py  reconcile_orphan_trades.py  scanner.py  sniper.py
polymarket/data/: btc_5m_state.json  copy_trader_state.json  (+4 more)
risk/: manager.py
signals/: confluence.py  indicators.py
strategies/: atlas.py  base.py  breakout.py  claude_advisor.py  delta_neutral.py  funding_arb.py  guide_strategies.py  liquidation_cascade.py  momentum.py  oracle.py  polymarket_arb.py  sentinel.py  sniper.py
telegram/: bot.py
