[project]
name = "apex"
version = "1.0.0"
description = "APEX — Unified Trading Bot"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp>=3.9.0",
    "anthropic>=0.25.0",
    "numpy",
    "pandas",
    "pandas-ta",
    "plotly>=5.20.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.32.0",
    "lighter-sdk>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
